--- a/Grantseattle/Grantseattle.Web.csproj
+++ b/Grantseattle/Grantseattle.Web.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AgentController.cs" />
     <Compile Include="Controllers\Base\BaseController.cs" />
+    <Compile Include="Controllers\BlogController.cs" />
     <Compile Include="Controllers\ErrorsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ItemController.cs" />
@@ -497,6 +498,11 @@
     <Content Include="Views\PropertyListing\PropertyRegistration.cshtml" />
     <Content Include="Views\PropertyListing\PropertyDetailsModelView.cshtml" />
     <Content Include="Views\PropertyListing\PropertyImagesModelView.cshtml" />
+    <Content Include="Views\Blog\Create.cshtml" />
+    <Content Include="Views\Blog\Delete.cshtml" />
+    <Content Include="Views\Blog\Details.cshtml" />
+    <Content Include="Views\Blog\Edit.cshtml" />
+    <Content Include="Views\Blog\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
