--- a/Grantseattle/Grantseattle.Web.csproj
+++ b/Grantseattle/Grantseattle.Web.csproj
@@ -184,9 +184,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountController.generated.cs">
-      <DependentUpon>T4MVC.tt</DependentUpon>
-    </Compile>
     <Compile Include="App_Start\AuthorizeAccess.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Bootstrapper.cs" />
@@ -198,23 +195,13 @@
     <Compile Include="Controllers\ClientController.cs" />
     <Compile Include="Controllers\ErrorsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Controllers\NewsPortalController.cs" />
     <Compile Include="Controllers\PropertyListingController.cs" />
     <Compile Include="Controllers\Services.cs" />
-    <Compile Include="ErrorsController.generated.cs">
-      <DependentUpon>T4MVC.tt</DependentUpon>
-    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helper\RouteHelper.cs" />
-    <Compile Include="HomeController.generated.cs">
-      <DependentUpon>T4MVC.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ItemController.generated.cs">
-      <DependentUpon>T4MVC.tt</DependentUpon>
-    </Compile>
     <Compile Include="ModelBuilders\AccountModelBuilders.cs" />
     <Compile Include="ModelBuilders\NewsEditModelBuilder.cs" />
     <Compile Include="ModelConverters\AccountModelConverters.cs" />
@@ -227,15 +214,7 @@
     <Compile Include="Models\PropertyImagesModelView.cs" />
     <Compile Include="Models\PropertyModelView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SharedController.generated.cs">
-      <DependentUpon>T4MVC.tt</DependentUpon>
-    </Compile>
     <Compile Include="Startup.cs" />
-    <Compile Include="T4MVC.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>T4MVC.tt</DependentUpon>
-    </Compile>
     <Compile Include="Web\ModelBuilders\ItemModelBuilders.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -733,7 +712,6 @@
     <Content Include="Scripts\zebra_datepicker\css\themes.png" />
     <Content Include="Scripts\zebra_datepicker\zebra_datepicker.js" />
     <Content Include="Scripts\_references.js" />
-    <None Include="T4MVC.tt.settings.xml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -757,11 +735,6 @@
     <Content Include="Views\Account\SignIn.cshtml" />
     <Content Include="Views\Account\SignUp.cshtml" />
     <Content Include="Views\Shared\_HomeLayout.cshtml" />
-    <None Include="T4MVC.tt.hooks.t4" />
-    <None Include="T4MVC.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>T4MVC.cs</LastGenOutput>
-    </None>
     <Content Include="Views\Shared\_SubLayout.cshtml" />
     <Content Include="Views\Item\CreateItem.cshtml" />
     <Content Include="Views\Item\ItemList.cshtml" />
@@ -802,6 +775,7 @@
     <Content Include="Views\Client\Blog.cshtml" />
     <Content Include="Views\Client\OurService.cshtml" />
     <Content Include="Views\Client\MyFavourite.cshtml" />
+    <Content Include="Views\BlogPost\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
