--- a/Grantseattle/Grantseattle.Web.csproj
+++ b/Grantseattle/Grantseattle.Web.csproj
@@ -777,6 +777,8 @@
     <Content Include="Views\Client\MyFavourite.cshtml" />
     <Content Include="Views\BlogPost\Delete.cshtml" />
     <Content Include="Views\Account\PasswordChange.cshtml" />
+    <Content Include="Views\Agent\Edit.cshtml" />
+    <Content Include="Views\PropertyListing\PropertyTypeEdit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
