--- a/Grantseattle/Grantseattle.Web.csproj
+++ b/Grantseattle/Grantseattle.Web.csproj
@@ -822,6 +822,7 @@
     <Content Include="Views\Agent\Edit.cshtml" />
     <Content Include="Views\PropertyListing\PropertyTypeEdit.cshtml" />
     <Content Include="Views\Search\_SearchResult.cshtml" />
+    <Content Include="Views\Client\_MyFavourite.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
