--- a/Grantseattle.Core/Grantseattle.Core.csproj
+++ b/Grantseattle.Core/Grantseattle.Core.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Domain\Base\IValueObject.cs" />
     <Compile Include="Domain\BlogCategory.cs" />
     <Compile Include="Domain\BlogContent.cs" />
+    <Compile Include="Domain\ContactUs.cs" />
     <Compile Include="Domain\Country.cs" />
     <Compile Include="Domain\Enums.cs" />
     <Compile Include="Domain\Items.cs" />
