--- a/Grantseattle.Service/Grantseattle.Service.csproj
+++ b/Grantseattle.Service/Grantseattle.Service.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Services\Services\IAuthenticationService.cs" />
     <Compile Include="Services\Services\IBlogCategoryService.cs" />
     <Compile Include="Services\Services\IBlogPostService.cs" />
+    <Compile Include="Services\Services\IContactUsService.cs" />
     <Compile Include="Services\Services\ICountryService.cs" />
     <Compile Include="Services\Services\IEmailService.cs" />
     <Compile Include="Services\Services\IItemService.cs" />
@@ -60,6 +61,7 @@
     <Compile Include="Services\Services\Implementations\AuthenticationService.cs" />
     <Compile Include="Services\Services\Implementations\BlogCategoryService.cs" />
     <Compile Include="Services\Services\Implementations\BlogPostService.cs" />
+    <Compile Include="Services\Services\Implementations\ContactUsService.cs" />
     <Compile Include="Services\Services\Implementations\CountryService.cs" />
     <Compile Include="Services\Services\Implementations\EmailService.cs" />
     <Compile Include="Services\Services\Implementations\NewsPortalService.cs" />
